--- a/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
@@ -31,6 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\log4net\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.2.10.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\nunit\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -45,7 +53,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileRetrievalTests.cs" />
+    <Compile Include="Helpers\LogHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Azavea.NijPredictivePolicing.AcsDataImporter\Azavea.NijPredictivePolicing.AcsDataImporter.csproj">
+      <Project>{A8D5E203-EA5A-4560-A4D6-6586F8C3ABA6}</Project>
+      <Name>Azavea.NijPredictivePolicing.AcsDataImporter</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Azavea.NijPredictivePolicing.AcsImporterLibrary\Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj">
+      <Project>{F524B387-A813-4FE4-AD37-E21D7645A1DC}</Project>
+      <Name>Azavea.NijPredictivePolicing.AcsImporterLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Azavea.NijPredictivePolicing.Common\Azavea.NijPredictivePolicing.Common.csproj">
+      <Project>{9E1E6F34-233E-4145-8DB0-75BFA5DB1715}</Project>
+      <Name>Azavea.NijPredictivePolicing.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
