--- a/csharp/Azavea.NijPredictivePolicing.Parsers/Azavea.NijPredictivePolicing.Parsers.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Parsers/Azavea.NijPredictivePolicing.Parsers.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -58,6 +60,7 @@
     <Compile Include="IDataFileReader.cs" />
     <Compile Include="IDataFileWriter.cs" />
     <Compile Include="IRowEnumerator.cs" />
+    <Compile Include="NullSeparatedValueReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TabSeparatedValueReader.cs" />
     <Compile Include="TabSeparatedValueWriter.cs" />
