--- a/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
@@ -53,17 +53,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CsvTests.cs" />
-    <Compile Include="FileRetrievalTests.cs" />
+    <Compile Include="AcsImporterLibrary\AreaDownloaderTests.cs" />
+    <Compile Include="Common\Data\CommaSeparatedValueTests.cs" />
+    <Compile Include="Common\Data\FixedWidthColumnFileTests.cs" />
     <Compile Include="Helpers\LogHelpers.cs" />
-    <Compile Include="NullSeparatedValueReaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Azavea.NijPredictivePolicing.AcsDataImporter\Azavea.NijPredictivePolicing.AcsDataImporter.csproj">
-      <Project>{A8D5E203-EA5A-4560-A4D6-6586F8C3ABA6}</Project>
-      <Name>Azavea.NijPredictivePolicing.AcsDataImporter</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Azavea.NijPredictivePolicing.AcsImporterLibrary\Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj">
       <Project>{F524B387-A813-4FE4-AD37-E21D7645A1DC}</Project>
       <Name>Azavea.NijPredictivePolicing.AcsImporterLibrary</Name>
@@ -71,10 +67,6 @@
     <ProjectReference Include="..\Azavea.NijPredictivePolicing.Common\Azavea.NijPredictivePolicing.Common.csproj">
       <Project>{9E1E6F34-233E-4145-8DB0-75BFA5DB1715}</Project>
       <Name>Azavea.NijPredictivePolicing.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Azavea.NijPredictivePolicing.Parsers\Azavea.NijPredictivePolicing.Parsers.csproj">
-      <Project>{C3B6D310-5133-481A-87B3-620E6644805F}</Project>
-      <Name>Azavea.NijPredictivePolicing.Parsers</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
