--- a/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\log4net\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -45,6 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\CommaSeparatedValueReader.cs" />
+    <Compile Include="Data\CommaSeparatedValueWriter.cs" />
+    <Compile Include="Data\GenericSeparatedValueReader.cs" />
+    <Compile Include="Data\GenericSeparatedValueWriter.cs" />
+    <Compile Include="Data\IDataFileReader.cs" />
+    <Compile Include="Data\IDataFileWriter.cs" />
+    <Compile Include="Data\IRowEnumerator.cs" />
+    <Compile Include="Data\NullSeparatedValueReader.cs" />
+    <Compile Include="Data\TabSeparatedValueReader.cs" />
+    <Compile Include="Data\TabSeparatedValueWriter.cs" />
     <Compile Include="States.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
