added a ton of stuff, database importing, geography file column structure, data managers, magic database code, refactored fixed width columns, now creating spatialite database

--- a/csharp/Azavea.NijPredictivePolicing.AcsImporterLibrary/Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporterLibrary/Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj
@@ -70,7 +70,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcsState.cs" />
+    <Compile Include="FileFormats\GeographyFileReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transfer\AcsDataManager.cs" />
     <Compile Include="Transfer\FileLocator.cs" />
   </ItemGroup>
   <ItemGroup>
