refactored directory structure, fixed off-by-one in geography column defs, added shapefile download by fips code, tweaked sqlite conn string, fixed a fileutilities bug, moved downloading code from filelocator to filedownloader

--- a/csharp/Azavea.NijPredictivePolicing.AcsImporterLibrary/Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporterLibrary/Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj
@@ -73,6 +73,7 @@
     <Compile Include="FileFormats\GeographyFileReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transfer\AcsDataManager.cs" />
+    <Compile Include="Transfer\FileDownloader.cs" />
     <Compile Include="Transfer\FileLocator.cs" />
   </ItemGroup>
   <ItemGroup>
