there is some weird error while reading shapefiles, but the concept is there.

--- a/csharp/Azavea.NijPredictivePolicing.AcsImporterLibrary/Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporterLibrary/Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj
@@ -55,6 +55,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\log4net\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="NetTopologySuite, Version=1.7.3.36606, Culture=neutral, PublicKeyToken=f580a05016ebada1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\nettopologysuite\NetTopologySuite.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -71,6 +75,7 @@
   <ItemGroup>
     <Compile Include="AcsState.cs" />
     <Compile Include="FileFormats\GeographyFileReader.cs" />
+    <Compile Include="FileFormats\ShapefileHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transfer\AcsDataManager.cs" />
     <Compile Include="Transfer\FileDownloader.cs" />
