Comments, refactoring, and columnMappings table + accoutrements
 - Moved Settings.AppTempDir to Azavea.NijPredictivePolicing.AcsImporter\ACSImporter for debugging purposes
 - Added SequenceFileReader.cs for reading Seq*.xls files
 - Removed some old code in FileLocator.cs, added some comments
 - Modified connection string for SqliteDataClient to use larger cache, doesn't seem to have helped much
 - Added settings for column mapping file
 - Lots of comments added and renaming things to be more consistent, some minor refactoring

AcsDataManager.cs:
 - Added logic for retrieving sequence mapping files (called ColumnMappingsFile in the code)
 - Added CreateGeographiesTable() and CreateColumnMappingsTable() functions

--- a/csharp/Azavea.NijPredictivePolicing.AcsImporterLibrary/Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporterLibrary/Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj
@@ -47,6 +47,10 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Excel, Version=2.0.1.0, Culture=neutral, PublicKeyToken=93517dbe6a4012fa, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\excelDataReader\Excel.dll</HintPath>
+    </Reference>
     <Reference Include="GeoAPI, Version=1.1.0.0, Culture=neutral, PublicKeyToken=a1a0da7def465678, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\geoapi\GeoAPI.dll</HintPath>
@@ -75,6 +79,7 @@
   <ItemGroup>
     <Compile Include="AcsState.cs" />
     <Compile Include="FileFormats\GeographyFileReader.cs" />
+    <Compile Include="FileFormats\SequenceFileReader.cs" />
     <Compile Include="FileFormats\ShapefileHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transfer\AcsDataManager.cs" />
