--- a/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
@@ -89,6 +89,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CmdLineArg.cs" />
+    <Compile Include="CmdLineJobBase.cs" />
     <Compile Include="ColNameToSeqNumberTable.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Data\CommaSeparatedValueReader.cs" />
