--- a/csharp/Azavea.NijPredictivePolicing.AcsImporter/Azavea.NijPredictivePolicing.AcsDataImporter.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporter/Azavea.NijPredictivePolicing.AcsDataImporter.csproj
@@ -93,6 +93,8 @@
   -->
   <PropertyGroup>
     <PostBuildEvent>copy C:\projects\Temple_Univ_NIJ_Predictive_Policing\lib\spatialite\*.dll "$(ProjectDir)$(OutDir)"
-copy "$(ProjectDir)\WGS84NAD83.prj" "$(ProjectDir)$(OutDir)\WGS84NAD83.prj"</PostBuildEvent>
+copy "$(ProjectDir)\WGS84NAD83.prj" "$(ProjectDir)$(OutDir)\WGS84NAD83.prj"
+copy C:\projects\Temple_Univ_NIJ_Predictive_Policing\data\*.csv "$(ProjectDir)$(OutDir)"
+</PostBuildEvent>
   </PropertyGroup>
 </Project>
