--- a/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
@@ -63,9 +63,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nettopologysuite\NetTopologySuite.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Newtonsoft.Json.Net20, Version=4.0.2.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\json\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\lib\json\Newtonsoft.Json.Net20.dll</HintPath>
     </Reference>
     <Reference Include="ProjNET, Version=1.1.2854.24700, Culture=neutral, PublicKeyToken=a1f5bdcd9c6f5740, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
