tweaked some tests, added command line parser tests, fixed command line parsing to handle quotes, hypens in quotes, added invalid param warning, added exit codes.

--- a/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
@@ -93,6 +93,7 @@
     <Compile Include="CmdLineJobBase.cs" />
     <Compile Include="ColNameToSeqNumberTable.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Data\CommaSeparatedValueReader.cs" />
     <Compile Include="Data\CommaSeparatedValueWriter.cs" />
     <Compile Include="Data\FileWriterHelpers.cs" />
