--- a/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
@@ -112,6 +112,10 @@
       <Project>{F524B387-A813-4FE4-AD37-E21D7645A1DC}</Project>
       <Name>Azavea.NijPredictivePolicing.AcsImporterLibrary</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Azavea.NijPredictivePolicing.AcsImporter\Azavea.NijPredictivePolicing.AcsDataImporter.csproj">
+      <Project>{A8D5E203-EA5A-4560-A4D6-6586F8C3ABA6}</Project>
+      <Name>Azavea.NijPredictivePolicing.AcsDataImporter</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Azavea.NijPredictivePolicing.Common\Azavea.NijPredictivePolicing.Common.csproj">
       <Project>{9E1E6F34-233E-4145-8DB0-75BFA5DB1715}</Project>
       <Name>Azavea.NijPredictivePolicing.Common</Name>
