--- a/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Common\Data\ExcelDataReaderTests.cs" />
     <Compile Include="Helpers\Utilities.cs" />
     <Compile Include="Helpers\LogHelpers.cs" />
+    <Compile Include="IntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
