added licensing to every file, added licenses to projects, set to copy.  added copyright notice to startup

--- a/csharp/Azavea.NijPredictivePolicing.AcsImporterLibrary/Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporterLibrary/Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj
@@ -107,7 +107,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AcsImporterLibrary.License.txt" />
+    <Content Include="gpl.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lgpl-3.0.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
