--- a/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
@@ -125,6 +125,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="init_spatialite.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
