#22784 - updating open source license pre-release

--- a/csharp/Azavea.NijPredictivePolicing.AcsImporter/Azavea.NijPredictivePolicing.AcsDataImporter.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporter/Azavea.NijPredictivePolicing.AcsDataImporter.csproj
@@ -84,14 +84,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="lgpl-3.0.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Logging.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="gpl.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
