adding copies of gpl lib

--- a/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
@@ -127,7 +127,7 @@
     <None Include="TestData\ParserTests\wellFormed.csv" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="lgpl-3.0.txt">
+    <Content Include="gpl.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="TestData\ParserTests\fixedWidth.txt" />
