--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ obj
 /csharp/temp
 /csharp/Azavea.NijPredictivePolicing.AcsImporter/ACSImporter
 /acsimporter_1_0_0/bin
+
+/csharp/Backup
+/csharp/_UpgradeReport_Files
