--- a/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
@@ -98,8 +98,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcsDataManagerTests.cs" />
-    <Compile Include="AcsImporterLibrary\AreaDownloaderTests.cs" />
-    <Compile Include="AcsImporterLibrary\ShapefileHelperTests.cs" />
+    <Compile Include="ACSAlchemistLibrary\AreaDownloaderTests.cs" />
+    <Compile Include="ACSAlchemistLibrary\ShapefileHelperTests.cs" />
     <Compile Include="Common\CmdLineJobBaseTests.cs" />
     <Compile Include="Common\ConfigTests.cs" />
     <Compile Include="Common\Data\CommaSeparatedValueTests.cs" />
@@ -112,13 +112,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Azavea.NijPredictivePolicing.AcsImporterLibrary\Azavea.NijPredictivePolicing.AcsImporterLibrary.csproj">
+    <ProjectReference Include="..\Azavea.NijPredictivePolicing.AcsImporterLibrary\Azavea.NijPredictivePolicing.AcsAlchemistLibrary.csproj">
       <Project>{F524B387-A813-4FE4-AD37-E21D7645A1DC}</Project>
-      <Name>Azavea.NijPredictivePolicing.AcsImporterLibrary</Name>
+      <Name>Azavea.NijPredictivePolicing.AcsAlchemistLibrary</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Azavea.NijPredictivePolicing.AcsImporter\Azavea.NijPredictivePolicing.AcsDataImporter.csproj">
+    <ProjectReference Include="..\Azavea.NijPredictivePolicing.AcsImporter\Azavea.NijPredictivePolicing.AcsAlchemist.csproj">
       <Project>{A8D5E203-EA5A-4560-A4D6-6586F8C3ABA6}</Project>
-      <Name>Azavea.NijPredictivePolicing.AcsDataImporter</Name>
+      <Name>Azavea.NijPredictivePolicing.AcsAlchemist</Name>
     </ProjectReference>
     <ProjectReference Include="..\Azavea.NijPredictivePolicing.Common\Azavea.NijPredictivePolicing.Common.csproj">
       <Project>{9E1E6F34-233E-4145-8DB0-75BFA5DB1715}</Project>
