--- a/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Common\DB\SpatialiteTests.cs" />
     <Compile Include="Common\DB\TableCreationTests.cs" />
     <Compile Include="Common\Data\ExcelDataReaderTests.cs" />
+    <Compile Include="Common\UtilitiesTests.cs" />
     <Compile Include="Helpers\LogHelpers.cs" />
     <Compile Include="IntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
