--- a/csharp/Azavea.NijPredictivePolicing.AcsImporter/Azavea.NijPredictivePolicing.AcsAlchemist.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporter/Azavea.NijPredictivePolicing.AcsAlchemist.csproj
@@ -145,6 +145,6 @@
     <PostBuildEvent>copy C:\projects\Temple_Univ_NIJ_Predictive_Policing\lib\spatialite\*.dll "$(ProjectDir)$(OutDir)"
 copy "$(ProjectDir)\WGS84NAD83.prj" "$(ProjectDir)$(OutDir)\WGS84NAD83.prj"
 copy C:\projects\Temple_Univ_NIJ_Predictive_Policing\data\*.csv "$(ProjectDir)$(OutDir)"
-</PostBuildEvent>
+$(ProjectDir)$(OutDir)\AcsAlchemist.exe</PostBuildEvent>
   </PropertyGroup>
 </Project>
