--- a/csharp/Azavea.NijPredictivePolicing.AcsImporterGui/Azavea.NijPredictivePolicing.AcsAlchemistGui.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporterGui/Azavea.NijPredictivePolicing.AcsAlchemistGui.csproj
@@ -91,6 +91,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextboxAppender.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -146,6 +147,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy C:\projects\acs-alchemist\data\*.csv "$(ProjectDir)$(OutDir)"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
